fix dark mode text

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,9 @@ strong {
     border: 1px white solid;
     color: white;
   }
+  .fly-text {
+    color: #fff !important;
+  }
 }
 
 /* navigation bar */
